# myRoomTonight

./: ChangeLog.md  README.md  myRoomTonight.cabal  setup.sh
db-testcases/: medium.php  mongo_config.php  simple.php
haskell-backend/: myRoomTonight.cabal  test.json
haskell-backend/html/css/: main.css
haskell-backend/src/: Main.hs  Reader.hs  Template.hs  Types.hs
haskell-backend/src/Pages/: Index.hs
haskell-backend/src/Templates/: Footer.hs  Head.hs  Header.hs  Scripts.hs
haskell-backend/src/Tests/: Simple.hs
haskell-backend/src/solver/: Solver.hs
haskell-backend/src/solver/Tests/: Simple.hs
php-frontend/: setup.sh
php-frontend/www/: create.css  create.html  create.php  create_room.php  create_user.php  create_users.php  head.php  index.html  index.php  insert_room.php  insert_user.php  mongo_config.php  read.php  render_collection.php
php-frontend/www/css/: local-style.css
src/: Main.hs  Solver.hs  Types.hs
