
name:                myRoomTonight
version:             0.1.0.0
synopsis:            homeless app mathcing
-- description:         
homepage:            marksantolucito.com
license:             AllRightsReserved
license-file:        LICENSE
author:              Mark Santolucito
maintainer:          mark.santolucito@yale.edu
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable myRoomTonight
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                      ,Munkres
                      ,containers
                      ,array
                      ,aeson
  hs-source-dirs:      src
  default-language:    Haskell2010
